# libe-desk

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  navigation_policy.rs
src/domain/: navigation-policy.test.ts  navigation-policy.ts  services.ts  types.ts
src/operations/: tauri-operations.ts
