[package]
name = "libe-desk"
version = "0.1.0"
description = "Unofficial Libe City desktop browser"
authors = ["Tatsuya-Dragon"]
edition = "2021"
license = "MIT"

[lib]
name = "libe_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
